# car-diagnosis

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-source-projects.md  01-what-we-have.md  02-scraping-with-camoufox.md  03-architecture-diagrams.md  DEFENSE.md  MODEL_CARD.md  PROOFS.md  README.md  RESULTS.md  SCORECARD.md  WALKTHROUGH.md  architecture.md  scorecard.json  scraping-guide.md
docs/research/: STATUS.md  eval-methodology.md  iteration-research.md  pipeline-api-convergence.md  plan-metadata-capture.md  sublabel-roadmap.md
models/: README.md  best_model_clap.joblib  triage_model.joblib
proofs/: inference_proof.txt  labeling_proof.txt  scrape_proof.txt  showcase.jsonl  tiktok_camoufox_proof.txt
scripts/: build_poc_model.py  build_shipped_model.py  clone_verify.sh  make_fixtures.py  showcase.py  ui_review.py
src/cardiag/: __init__.py  cli.py  config.py  doctor.py  inspect.py  paths.py  types.py
src/cardiag/audio/: cascade.py  clap.py  clean.py  embed.py  saliency.py
src/cardiag/inference/: __init__.py  classifier.py  triage.py
src/cardiag/ingest/reddit/: label_reddit.py  pipeline.py  scrape.py
src/cardiag/ingest/tiktok/: batch.py  batch_shard.py  discover.py  normalize.py
src/cardiag/ingest/youtube/: batch.py  capture.py  discover.py  discover_diagnostic.py  enrich.py  normalize.py  pipeline.py  validate.py  vehicle.py
src/cardiag/modal/: modal_audio.py  modal_qwen.py  serve_qwen.py
src/cardiag/pipeline/: build.py  fusion.py  gate_tier.py  llm.py  music_gate.py
src/cardiag/scrape/: browser.py
src/cardiag/training/eval/: binary_probes.py  calibrate.py  eval_second_opinion.py  precision_coverage.py  scorecard.py  split_check.py  systems_confidence.py  systems_eval.py
src/cardiag/training/features/: embed.py  features.py  fill_features.py
src/cardiag/training/models/: confidence.py  train_best.py  train_heads.py  triage.py
src/cardiag/training/prep/: causes.py  join_sublabels.py  prepare.py  text_mine.py  text_mine_tt.py
src/cardiag/web/: app.py  explain.py
src/cardiag/web/static/: index.html
tests/: conftest.py  test_audio_cascade.py  test_build_labels.py  test_cli_web.py  test_doctor_cli.py  test_embedding_contract.py  test_honesty.py  test_inference_contract.py  test_live_model.py  test_offline_features.py  test_robustness.py  test_snapshots.py  test_unit_core.py
tests/e2e/: test_web_e2e.py
tests/snapshots/: cascade_regions.json  fixture_model_classes.json  label_distribution.json
