[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardiag"
dynamic = ["version"]   # single source of truth: src/cardiag/__init__.py __version__
description = "Diagnose a car's mechanical fault from the sound it makes — scrape, clean, label, train, classify."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [{ name = "Adam Sohn" }]
keywords = ["audio", "machine-learning", "automotive", "sound-classification", "clap"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

# Core = everything needed to CLEAN a clip and DIAGNOSE it with a trained model.
dependencies = [
    "numpy>=1.26",
    "librosa>=0.10",
    "soundfile>=0.12",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "torch>=2.2",
    "transformers>=4.40",
    "silero-vad>=5.1",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Scraping the corpus (YouTube / TikTok / Reddit). YouTube + Reddit need only
# yt-dlp; TikTok + Reddit discovery use Camoufox (stealth Firefox). ocrmac is
# macOS-only; on other platforms swap in easyocr behind the same consensus
# interface.
scrape = [
    "yt-dlp>=2024.0",
    "camoufox>=0.4.11",
    "playwright==1.51.0",   # MUST match Camoufox's Firefox 135 (newer crashes on pageError)
    "ocrmac>=1.0; sys_platform == 'darwin'",
]
# Visualization for `cardiag inspect` (spectrograms / waveforms).
viz = ["matplotlib>=3.7"]
# Optional cloud-GPU batch jobs (Modal). Not needed for local use.
cloud = ["modal>=0.64"]
# Local web upload app.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
# Test pyramid + CI + lint/type.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-playwright>=0.5",
    "ruff>=0.6",
    "mypy>=1.10",
]
# Everything.
all = ["cardiag[scrape,web,viz,dev]"]

[project.scripts]
cardiag = "cardiag.cli:app"

[project.urls]
Homepage = "https://github.com/adamsohn/car-diagnosis"
Documentation = "https://github.com/adamsohn/car-diagnosis/tree/main/docs"

[tool.hatch.version]
path = "src/cardiag/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cardiag"]
artifacts = ["src/cardiag/_fixtures/*.npz", "src/cardiag/_fixtures/*.wav",
             "src/cardiag/web/static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/cardiag/modal"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# E731 (lambda assignment) and UP042 (str+Enum, kept for JSON-serializable enums)
# are intentional project style.
ignore = ["E731", "UP042"]
# The ported research pipeline (ingest/training/pipeline-internals) keeps its
# original dense style; lint the engineered surface strictly, the ported code
# lightly.
[tool.ruff.lint.per-file-ignores]
"src/cardiag/ingest/**" = ["E501", "E741", "E702", "F841"]
"src/cardiag/training/**" = ["E501", "E741", "E702", "F841"]
"src/cardiag/pipeline/fusion.py" = ["E501", "E741", "E702"]
"src/cardiag/pipeline/gate_tier.py" = ["E501", "E741", "E702"]
"src/cardiag/pipeline/llm.py" = ["E741"]
"src/cardiag/pipeline/music_gate.py" = ["E741", "F841"]
"src/cardiag/inspect.py" = ["E501"]   # long lines live inside the HTML/CSS string
"scripts/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Type-check only the clean engineered core; the ported research code is untyped.
files = ["src/cardiag/types.py", "src/cardiag/config.py", "src/cardiag/paths.py",
         "src/cardiag/audio/clean.py", "src/cardiag/inference"]
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that hit the network or heavy models (deselect with -m 'not live')",
    "model: tests that need a trained model artifact in data/training/",
    "e2e: browser end-to-end tests (require playwright browsers installed)",
]
addopts = "-m 'not live and not e2e' -q"

[tool.cardiag]
# Where the (gitignored) data tree lives. Override with the CARDIAG_DATA env var.
# Defaults to <repo>/data, resolved in cardiag/paths.py.
